feat: Optimization update - WebM video conversion, PWA integration, JIT Loading fix

--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- SEO & Premium Feel -->
+    <meta name="description" content="OWN KARMA — A journey of conscious living. Explore our exclusive chapters and timeless pieces." />
+    <meta name="theme-color" content="#000000" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ownkarma.com/" />
+    <meta property="og:title" content="Own Karma — The Journey" />
+    <meta property="og:description" content="A journey of conscious living. Explore our exclusive chapters and timeless pieces." />
+    <meta property="og:image" content="/backgrounds/website-logo.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://ownkarma.com/" />
+    <meta property="twitter:title" content="Own Karma — The Journey" />
+    <meta property="twitter:description" content="A journey of conscious living. Explore our exclusive chapters and timeless pieces." />
+    <meta property="twitter:image" content="/backgrounds/website-logo.png" />
+
     <!-- Preload Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
